# MNAR-Net

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
checkpoints/: README.md
data/: README.md  dataset_reference.txt
examples/: minimal_forward.py  minimal_incremental.py
src/mnar_net/: __init__.py
src/mnar_net/data/: __init__.py  preprocessing.py
src/mnar_net/models/: __init__.py  mdct.py  mnar_net.py
src/mnar_net/modules/: __init__.py  blocks.py  mdrc.py  transformer.py
src/mnar_net/replay/: __init__.py  naer.py
